Change size off all canvas to start of 1200 pixels to fit div. Red play line jumps to 0 if stop is pushed Selection on waveform now works (The part that is chosen is displayed in the spectrogram). If the spectrogramm is scrolled or zoomed, the selection in the waveform changes

--- a/Webaudiostyle.css
+++ b/Webaudiostyle.css
@@ -305,6 +305,11 @@ input[type=range]::-webkit-slider-thumb {
     z-index: 0;
 }
 
+#canvasSelect{
+    margin-left: 25px;
+    position: absolute;
+    z-index: 0;
+}
 #canvasRMS{
     margin-left: 25px;
     position: absolute;
